--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>heosphoros</title>
+    <meta description="Project Heosphoros">
+    <title>Chen Qian</title>
   </head>
   <body>
+    <noscript>This website requires JavaScript :<</noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
