--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta description="Project Heosphoros">
-    <link rel="logo" type="image/png" href="/static/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static/logo.png"/>
     <title>Chen Qian</title>
   </head>
   <body>
